--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "core-js": "^3.6.5",
     "echarts": "^5.0.2",
     "element-ui": "^2.4.5",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
